Darkmode contrast issue fix

--- a/ourchive-dark.scss
+++ b/ourchive-dark.scss
@@ -226,3 +226,7 @@ input:focus + .slider {
 .ourchive-span-link {
   color: $ourchive-orange;
 }
+
+.uk-button-danger {
+  color: $ourchive-dark !important;
+}
